# finndict

./: README.md
voikko-fts/: CMakeLists.txt  README.md  main.c  test.sql
voikko-fts/dict/5/mor-standard/: index.txt  mor.vfst
